--- a/PHP/assets/css/estilo.css
+++ b/PHP/assets/css/estilo.css
@@ -111,13 +111,9 @@ body {
     border: 2px solid #4caf50;
 }
 
-.modulo.verde>h3 {
-    background-color: #4caf50;
-}
+.modulo.verde>h3 {background-color: #4caf50;}
 
-.modulo.vermelho {
-    border: 2px solid #f44336;
-}
+.modulo.vermelho {border: 2px solid #f44336;}
 
 .modulo.vermelho>h3 {
     background-color: #f44336;
