--- a/PHP/assets/css/exercicio.css
+++ b/PHP/assets/css/exercicio.css
@@ -34,6 +34,18 @@ body.exercicio{
 .navegacao > a.verde {background-color: #4caf50;}
 .navegacao > a.vermelho {background-color: #f44336;}
 
+.conteudo{
+    font-size: 2rem;
+}
+
+.conteudo > .titulo {
+    font-size: 2.5rem;
+    font-weight: 300;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #999;
+    margin-bottom: 20px;
+}
+
 
 
 
